[gd_scene load_steps=3 format=3 uid="uid://c3nucyg0de0ev"]

[ext_resource type="Texture2D" uid="uid://cuco2qhi1ltv3" path="res://assets/objects/Sem nome (60 x 40 px).png" id="1_jf10r"]
[ext_resource type="Script" path="res://script/hdu.gd" id="1_nf2hc"]

[node name="HDU" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 715.0
offset_bottom = 361.0
script = ExtResource("1_nf2hc")

[node name="GoldLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 60.0
offset_right = 42.0
offset_bottom = 83.0
text = "Ouro"

[node name="PowerBar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 36.0
offset_right = 37.0
offset_bottom = 58.0
value = 50.0
texture_over = ExtResource("1_jf10r")

[node name="HealthBar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 9.0
offset_right = 37.0
offset_bottom = 29.0
value = 50.0
texture_progress = ExtResource("1_jf10r")
